--- a/index.html
+++ b/index.html
@@ -35,8 +35,14 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <!-- Оверлей з призом -->
+  <div id="prizeOverlay" class="prize-overlay">
+    <div class="prize-popup">
+      <h2 id="prizeText"></h2>
+    </div>
+  </div>
 
+  <script src="script.js"></script>
 </body>
 
 </html>
