--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
         </ul>
         <div class="logo"></div>
       </fieldset>
-      <button id="spinButton" class="active">Roztoč kolo štěstí</button>
+      <div class="buttonContainer">
+        <button id="spinButton" class="active">Roztoč kolo štěstí</button>
+      </div>
     </div>
   </div>
 
-  <!-- Оверлей з призом -->
   <div id="prizeOverlay" class="prize-overlay">
     <div class="prize-popup">
       <h2 id="prizeText"></h2>
