--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul id="wheel">
           <li>5 % Sleva 💸</li>
           <li>Zatočit znovu 🔁</li>
-          <li>2×VĚTŠÍ ŠANCE 💰</li>
+          <li>2×VĚTŠÍ <br /> ŠANCE 💰</li>
           <li>1 Šance navíc 🎯</li>
           <li>Smůla 💩</li>
 
