--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
       <fieldset class="ui-wheel-of-fortune active">
         <ul id="wheel">
           <li>5 % Sleva 💸</li>
-          <li>Zatočit znovu 🔁</li>
+          <li>Zatočit<br />znovu 🔁</li>
           <li>2×VĚTŠÍ <br /> ŠANCE 💰</li>
-          <li>1 Šance navíc 🎯</li>
+          <li>1 Šance<br />navíc 🎯</li>
           <li>Smůla 💩</li>
 
           <li>5 % Sleva 💸</li>
-          <li>Zatočit znovu 🔁</li>
+          <li>Zatočit<br />znovu 🔁</li>
           <li>Smůla 💩</li>
-          <li>1 Šance navíc 🎯</li>
+          <li>1 Šance<br />navíc 🎯</li>
           <li>Smůla 💩</li>
         </ul>
         <div class="logo"></div>
